Implemented SubstrateThreadMXBean#getThreadCpuTime.